Prevent horizontal scrolling on mobile

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -239,6 +239,7 @@ body.showmenu .trigger {
 
   .footer-social {
     margin: 1.5em 0 3em 0;
+    overflow: hidden;
 
     li {
       border: 1px solid $white;
